# ws_rsa_chat

./: .gitignore  README.md  client.py  pyproject.toml  server.py
core/: __init__.py  pkey.py  user_manager.py  utils.py
tests/: test_bytes_extractor.py  test_crypto.py
