[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Maksim Shushkevich <meshushkevich@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
websocket-client = "^1.8.0"
rsa = "^4.9"
pytest = "^8.2.2"
importlib = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
